vbnc/vbnc/tests/Errors/32083-8.vb

Class A
    Friend Sub New()

    End Sub
End Class

Class B(Of T As New)
    Function M() As b(Of A)
        Return Nothing
    End Function
End Class